Pooling layer backward pass

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -381,7 +381,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5777b2cdd8>"
+       "<matplotlib.image.AxesImage at 0x7fe6897fb978>"
       ]
      },
      "execution_count": 3,
@@ -392,7 +392,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAUEAAACqCAYAAAAz+v3EAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEtRJREFUeJzt3X2wXHV9x/H3J2AYSEiUBxNLCAoIKY42pGMkk6ZEBQzY\nEv+w9anloVUZhcrUjg9NmTHO2FT/cBQURzEYedBKZYQEJW3iQKVBEiNJIEqCYQATYhIRSGgSK4F8\n+8c5N7Pc7MPZ3d/ds3fP5zWzc8/u/u73fO/u2e89Z8/v/H6KCMzMqmpM2QmYmZXJRdDMKs1F0Mwq\nzUXQzCrNRdDMKs1F0MwqzUXQzFqSdKmk/yk7j5HgImhmRQ1kp2IXQTOrNBfBkkk6VdIzkqbn9/9I\n0m8l/XnZuVn/6GQ7kXSvpEWS1kjaI+kOSa+sef4/JO2Q9Jyk/5Z0Vs1zx0lalv/eauC0Ef0DS+Qi\nWLKIeBz4JHCrpKOBJcCSiLiv3Mysn3SxnfwtcBkwGXgJ+ErNc3eTFbdXA+uA79Q89zVgPzAJ+Hvg\n77r/K/qTfO1wf5B0J3AqcBB4c0QcKDkl60PtbCeS7gUeiIgF+f0/BtYDR8ewD36+h/gsMBHYB/wf\n8IaI2JI//6/AnIgYuCMU7wn2j8XAG4CvuABaE+1uJ9tqln8NjAVOkDRG0uclPSZpN/AE2YmPE4AT\ngSOAp4b97kByEewDksYBXwZuBBbWfm9jNqTD7eTkmuVTgBeA3wEfAP4SeFtEvBJ4LaD89jTw4rDf\nndpt/v3KRbA/XAf8LCI+TPY9zTdKzsf6Uyfbyd9ImibpGOCzwPfzQ+HxwB+A5/Li+m/kXWAi4iDw\nA7JCe3R+wuTS9H9Of3ARLJmki4ELgI/mD30cOFvS+8rLyvpNF9vJLcBNwG/IDoWvzh+/GdgKbAd+\nAfx02O/9A3AssAP4Vn4bSF2dGJH0KuA2st3sJ4G/jog9ddo9Cewh+zL3QETM7HilZlZIfmLklogY\n2AKWQrd7gp8GfhwRZwL3AP/coN1BYG5EnO0CaGb9pNsiOJ9sV5v857satFOCdZnZMJL+V9LzNbeh\n+7MZ0MvcUuv2cPjZiDiu0f2axx8HdpN11rwhIr7Z8UrNzBI6slUDSSvJeo0feojsP8w1dZo3qqiz\nI2KHpBOBlZI2RcSqtrM1M0usZRGMiPMbPSdpl6RJEbFL0mTgtw1i7Mh/Pi3pDmAmULcISvIufEVF\nhEZ6Hd6+qq3eNtayCLawjOy6xC+Q9SNaOrxB3j9pTETszfsjXUDWX6mh559/vsu0Xm7RokUsWLAg\nacwJEyYkjTeSFi9enDTe0qVLmT9/ftKYH/zgB5PGa2b27NlNn9+6dStTp3bfN9hxehOnaKz777+/\n7uPdnqz4AnC+pEeBtwOfB5D0Gkk/zNtMAlZJWg+sBu6KiBVdrtfMLImu9gQj4lngvDqP7wD+Il9+\nApjezXrMzEZKJbqtzJkzp+wUBsqZZ55Zdgp1SZonabOkX0n6VKdxJk6cmCQfx+lNnG5juQha26ZN\nm1Z2CoeRNAb4KvAOslFW3iepo0T77UPuOCMbqxJF0CphJrAlIn6dDzH1PbLO/GZNuQjaoDiJl4+d\n91T+mFlTLoJmVmnd9hM06xfbefnAn1Pyxw6zdevWQ8sTJ05M+t2U9Y89e/awZ89hg1odxkXQBsVa\n4HRJp5CNgfdeoO5Ye6k66Fp/G/4Pbtu2bXXbuQjaQIiIlyRdBawg+5rnxojYVHJaNgq4CNrAiIj/\nBPqzE6P1LZ8YMbNKcxE0s0pzETSzSktSBItcsynpOklbJG2Q5AEVzKwvdF0Ei1yzKelC4LSIeD1w\nBfD1btdrZpZCij3BItdszieb55SIWANMlDQJM7OSpSiCRa7ZHN5me502ZmY95xMjZlZpKTpLF7lm\ncztwcos2hyxatOjQ8pw5czwe4ADavHkzjz76aNlpmCUpgkWu2VwGXAncJukcYHdE7GoUMPWkSNZ/\npk2b9rLBWe+6666uY0q6kWxah10R8aauA1oldH04HBEvAUPXbP4S+F5EbJJ0haQP523uBp6Q9Bjw\nDeCj3a7XrI4lZL0UzApLcu1wvWs2I+Ibw+5flWJdZo1ExKr8iMSsMJ8YMbNKcxE0s0rzUFpWOR5Z\nuho8srRVlfJbQx5ZuhqKjiztw2EbGJK+C/wUOEPSVkmXl52T9T/vCdrAiIj3l52DjT7eEzSzSnMR\nNLNKcxE0s0pzETSzSnMRNLNK89lhs5ItX748SZwJEyYkibN48eIkcZYsWZIkzkjryURLks6VtFvS\nuvx2TYr1mpl1q+s9wZqJlt4O/AZYK2lpRGwe1vS+iLi42/WZmaXUq4mWoMWlTGZmZejVREsAs/I5\nh38k6awE6zU7RNIUSfdI+qWkjZI+VnZONjr06sTIg8DUiNifz0F8J3BGj9Zt1fAi8PGI2CBpPPCg\npBV1vpYxe5meTLQUEXtrlpdL+pqk4yLi2XoBv/jFLx5anjt3LnPnzk2QZlqXXnpp2SkUdt5555Wd\nwmEeeOABVq9enSxeROwEdubLeyVtIjsicRG0pnoy0ZKkSUMTK0maCahRAQRYuHBhgrSsn82aNYtZ\ns2Ydun/ttdcmiy3ptcB0YE2yoDawui6CEfGSpKGJlsYANw5NtJQ9HTcA75b0EeAA8HvgPd2u16ye\n/FD4duDq2iMQs0Z6MtFSRFwPXJ9iXWaNSDqSrADeEhFLG7XzyNLV4JGlrYq+BTwSEU2PrT2ydDV4\nZGmrFEmzgQ8Ab5O0Pr8yaV7ZeVn/856gDYSIuB84ouw8bPTxnqCZVZqLoJlVmougmVWai6CZVZqL\noJlVms8Om5Xs2GOPTRIn1fXsqa41r9TI0mZmo5WLoJlVmougmVWai6CZVVqq2eZulLRL0sNN2lwn\naUs+xP70FOs1GyLpKElr8uuGN0r6TNk52eiQak9wCfCORk/mQ+qfFhGvB64Avp5ovWYARMQfgLdG\nxNlkA6pemA/ga9ZUkiIYEauA55o0mQ/cnLddA0yUNCnFus2GRMT+fPEosu5fUWI6Nkr06jvB4TPS\nbaf+jHRmHZM0RtJ6srlGVkbE2rJzsv7Xl52la+cY6deJlqw7qSdaAoiIg8DZkiYAd0o6KyIeGd7O\nI0tXQ7+NLL0dOLnm/mEz0tXyREuDbyQnWoqI5yXdC8wDDiuCHlm6GsoYWVr5rZ5lwCUAks4Bdg/N\nPmeWgqQTJE3Ml48GzsfTbVoBSfYEJX0XmAscL2kr8BlgLPlscxFxt6SLJD0G7AMuT7FesxqvAW6S\nNIbsn/ttEXF3yTnZKJBqtrn3F2hzVYp1mdUTERuBGWXnYaOPrxgxs0pzETSzSnMRNLNKcxE0s0rr\ny87SZlUyefLkJHFuvfXWJHHmzUszZ/3xxx+fJM5I856gmVWai6CZVZqLoJlVmougmVWai6ANlHw4\nrXWSlpWdi40OLoI2aK6mzsgxZo24CNrAkDQFuAhYXHYuNnr0ZKIlSedK2p0fpqyTdE2K9ZoN8yXg\nE3hYfWtDTyZayt0XETPy2+cSrdcMAEnvBHZFxAaaj21p9jKphtJaJemUFs28UdpImg1cLOki4Gjg\nWEk3R8Qlwxt6eP1q6Lfh9QFmSdpANqz+J+rN/WDWqYhYACyA7OsX4J/qFUDw8PpVUXR4/V4VwQeB\nqRGxP5+D+E7gjEaNU11LOZJSXafZC6muBTUbRD0pghGxt2Z5uaSvSTouIp6t137v3kPNGTt2LGPH\nju1BltZL+/btY//+/a0bdiAifgL8ZESC28BJWQQbfhktadLQxEqSZgJqVAABxo8fnzAt60fjxo1j\n3Lhxh+4/88wzJWZjVdaTiZaAd0v6CHAA+D3wnhTrNTPrVk8mWoqI64HrU6zLzCwlXzFiZpXmkaXN\nSnb66acnibNw4cIkcUbLiNCpeE/QzCrNRdDMKs1F0MwqzUXQzCrNJ0ZsYEh6EtgDHAQORMTMcjOy\n0cBF0AbJQWBuRDxXdiI2evhw2AaJ8DZtbfIGY4MkgJWS1kr6UNnJ2Ojgw2EbJLMjYoekE8mK4aaI\nWFV2UtbfXARtYETEjvzn05LuAGYChxVBjyxdDT0bWTqf4etmYBLZF9PfjIjr6rS7DrgQ2Adcls8F\nYZaEpGOAMRGxV9I44ALgs/XaemTpaujlyNIvAh+PiA2SxgMPSloREZuHGuSjSZ8WEa+X9Bbg68A5\nCdZtNmQScIekINuuvxMRK0rOyUaBrotgROwEdubLeyVtAk4CNtc0m0+2t0hErJE0sXagVbNuRcQT\nwPSy87DRJ+nZYUmvJdsQ1wx76iSgdl90e/6YmVmpkhXB/FD4duDq2jlFzMz6Warh9Y8kK4C3RMTS\nOk22AyfX3J+SP1aXJ1oafCM50ZJZO1J1kfkW8EhEXNvg+WXAlcBtks4Bdjf7PtATLQ0+T7Rk/SJF\nF5nZwAeAjZLWk/XaXwCcQj7RUkTcLekiSY+RdZG5vNv1mpmlkOLs8P3AEQXaXdXtuszMUvO1w2ZW\naS6CZlZpLoJmVmkugjYw8iuRvi9pk6Rf5pdomjXlUWRskFwL3B0Rf5X3XT2m7ISs/7kI2kCQNAGY\nExGXAUTEi8DzpSZlo4IPh21QvA74naQlktZJukHS0WUnZf3PRdAGxZHADOD6iJgB7Ac+XW5KNhr4\ncNgGxVPAtoj4eX7/duBT9Rp6ZOlq6NnI0mb9ICJ2Sdom6YyI+BXwduCRem09snQ19HJkabN+8THg\nO5JeATyOr1G3AlwEbWBExEPAm8vOw0aXrk+MSJoi6Z68c+pGSR+r0+ZcSbvzs3brJF3T7XrNzFJI\ncXZ4aKKlNwCzgCslTavT7r6ImJHfPpdgvYW98MILyWM+9NBDlY25b9++5DH7SZEv0x2nf+J0G6vr\nIhgRO4emz8yH1R+aaGk4dbuuTrkIpjXoI0L324fccUY2Vq8mWgKYJWmDpB9JOivles3MOpXsxEiL\niZYeBKZGxP58DuI7gTNSrdvMrFOKiO6DZBer/xBY3mSekdr2TwB/GhHP1nmu+4RsVIqIEf/KxNtX\ntdXbxnoy0VLtROuSZpIV38MKYKMkzVLx9mXD9WSiJeDdkj4CHAB+D7yn2/WamaWQ5HDYzGy0KnUU\nGUmvkrRC0qOS/ktS3SvZJT0p6SFJ6yX9rEGbeZI2S/qVpLoXzku6TtKW/Cz19AL5NY3ZSSdwSTdK\n2iXp4SZt2s2zacwO82zZCb7dXPu9Y32RbahgnJbvccE4hd6DAnGOkrQm//xslPSZLvMak783y7qI\n0fIzXTBO96OJR0RpN+ALwCfz5U8Bn2/Q7nHgVU3ijAEeIzsEfwWwAZg2rM2FwI/y5bcAq1vkViTm\nucCyNv/mPyPrRvRwg+fbyrNgzE7ynAxMz5fHA48meE2LxGw710TbYsv3O9V7nPI9aCPWMfnPI4DV\nwMwu8vpH4NZu3qdWn+k24nwbuDxfPhKY0G6MsscTnA/clC/fBLyrQTvRfK91JrAlIn4dEQeA7+Wx\nh6/rZoCIWANMlDSpy5hDuRUWEauA55o0aTfPIjE7ybNIJ/i2ci0Ys+1cEyn6frdU8P0oEqfo61Uk\n1lAP96PIikVH34NJmgJcBCzu5PdrQ9HlkWjNaOJLIBtNPCLaHk287CL46sjPGkfETuDVDdoFsFLS\nWkkfqvP8SUDtODlPcfjGMrzN9jpt2o0J6TuBt5tnUR3n2aQTfMe59mHH+qLvdylavF5Ffn9MfuJy\nJ7AyItZ2mMqXgE/QYRGt0eozXUSS0cRHfBQZSSuB2r0Dkb0A9b7rafTCzo6IHZJOJHvhNuX/bcs2\nWjqBd5ynmneC70iLmKPlNe2ZFO9BRBwEzs73nu6UdFZE1B1vsUke7wR2RcQGSXPpbo89xWd6aDTx\nKyPi55K+TDaaeFvfeY74nmBEnB8Rb6q5vTH/uQzYNXT4JGky8NsGMXbkP58G7iA7dKm1HagdKXNK\n/tjwNie3aNNWzIjYO3SYERHLgVdIOq5JzCLazbOlTvNU1gn+duCWiFiaItdWMUfoNS2iyDbUcwXe\ng7bkh4v3AvM6+PXZwMWSHgf+HXirpJs7zKPVZ7qIeqOJz2g3SNmHw8uAy/LlS4HD3mRJx+T/CZE0\nDrgA+MWwZmuB0yWdImks8N489vB1XZLHOQfYPXQo3kDLmLXff6lFJ/DhfxaN/4u2m2fLmF3k2bQT\nfIe5tuxY32Gu3SqyDbWj2XvcjlbvQetEpBOU97zIDxfPBza3GyciFkTE1Ig4lez1uSciLukgnyKf\n6SL57AK2SRo6Umg4mnirQKXdgOOAH5Od9VoBvDJ//DXAD/Pl15GdqVsPbAQ+3SDWvDzOlqE2wBXA\nh2vafJXsDOBDwIwC+TWNCVxJ9uatB34KvKVAzO8CvwH+AGwlG/242zybxuwwz9nASzWv/br89eg4\n1yIxO8k14fZ42PvdYZzD3o8O49R9vTqI88b8dzcADwP/kuC16vgsftHPdMFYf0L2D2wD8ANgYrsx\n3FnazCqt7MNhM7NSuQiaWaW5CJpZpbkImlmluQiaWaW5CJpZpbkImlmluQiaWaX9P0BfssqyjIfe\nAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f577a921048>"
+       "<matplotlib.figure.Figure at 0x7fe68c5ef0f0>"
       ]
      },
      "metadata": {},
@@ -1150,6 +1150,404 @@
     "    </tr>\n",
     "\n",
     "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### 12.5.2 池化层的反向传播\n",
+    "\n",
+    "接下来，我们需要实现池化层的反向传播。首先我们处理最大池化层。尽管对于反向传播来说，池化层没有需要更新的参数，我们计算反向传播时，依然需要计算这一层的梯度，这样才能继续计算上一层的梯度。\n",
+    "\n",
+    "##### 12.5.2.1 最大池化层的反向传播\n",
+    "\n",
+    "在开始池化层的反向传播之前，我们需要构建一个辅助函数 `create_mask_from_window()`，进行如下转换：\n",
+    "\n",
+    "$$ X = \\begin{bmatrix}\n",
+    "1 && 3 \\\\\n",
+    "4 && 2\n",
+    "\\end{bmatrix} \\quad \\rightarrow  \\quad M =\\begin{bmatrix}\n",
+    "0 && 0 \\\\\n",
+    "1 && 0\n",
+    "\\end{bmatrix}\\tag{4}$$\n",
+    "\n",
+    "这个函数创建了一个“掩码”矩阵，记录矩阵中最大值的位置。真值（1）表示最大值在矩阵 X 中所在的位置，其它的值都应该为假（0）。平均池化层后面也会用一个类似但不同的掩码矩阵。\n",
+    "\n",
+    "**练习**: 实现 `create_mask_from_window()`。\n",
+    "提示:\n",
+    "- [np.max()]() 可以计算数组中的最大值\n",
+    "- 给定矩阵 X 和标量 x: `A = (X == x)` 会返回和 X 同样大小的矩阵 A，使:\n",
+    "```\n",
+    "A[i,j] = True if X[i,j] = x\n",
+    "A[i,j] = False if X[i,j] != x\n",
+    "```\n",
+    "- 这里我们不必考虑矩阵中存在多个取最大值的元素的情况。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_mask_from_window(x):\n",
+    "    \"\"\"\n",
+    "    Creates a mask from an input matrix x, to identify the max entry of x.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    x -- Array of shape (f, f)\n",
+    "    \n",
+    "    Returns:\n",
+    "    mask -- Array of the same shape as window, contains a True at the position corresponding to the max entry of x.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈1 line)\n",
+    "    mask = x == np.max(x)\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [[ 1.62434536 -0.61175641 -0.52817175]\n",
+      " [-1.07296862  0.86540763 -2.3015387 ]]\n",
+      "mask =  [[ True False False]\n",
+      " [False False False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "x = np.random.randn(2,3)\n",
+    "mask = create_mask_from_window(x)\n",
+    "print('x = ', x)\n",
+    "print(\"mask = \", mask)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出:** \n",
+    "\n",
+    "<table> \n",
+    "<tr> \n",
+    "<td>\n",
+    "\n",
+    "**x =**\n",
+    "</td>\n",
+    "\n",
+    "<td>\n",
+    "\n",
+    "[[ 1.62434536 -0.61175641 -0.52817175] <br>\n",
+    " [-1.07296862  0.86540763 -2.3015387 ]]\n",
+    "\n",
+    "  </td>\n",
+    "</tr>\n",
+    "\n",
+    "<tr> \n",
+    "<td>\n",
+    "**mask =**\n",
+    "</td>\n",
+    "<td>\n",
+    "[[ True False False] <br>\n",
+    " [False False False]]\n",
+    "</td>\n",
+    "</tr>\n",
+    "\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 12.5.2.2 平均池化层的反向传播\n",
+    "\n",
+    "在最大池化中，对每个输入窗口，输出仅仅来自输入窗口中最大的那个值的影响。而在平均池化中，输入窗口中的每个元素对输出都有同等的影响。\n",
+    "\n",
+    "比如我们用 2x2 的过滤器来计算平均池化的前向传播，则方向传播过程中会用到的掩码为：\n",
+    "$$ dZ = 1 \\quad \\rightarrow  \\quad dZ =\\begin{bmatrix}\n",
+    "1/4 && 1/4 \\\\\n",
+    "1/4 && 1/4\n",
+    "\\end{bmatrix}\\tag{5}$$\n",
+    "\n",
+    "这表明矩阵 $dZ$ 中的每个位置对输出都有同等影响。\n",
+    "\n",
+    "**练习**: 实现下面的函数，来平均分布 dz 到矩阵的各个维度中. [提示](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.ones.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def distribute_value(dz, shape):\n",
+    "    \"\"\"\n",
+    "    Distributes the input value in the matrix of dimension shape\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dz -- input scalar\n",
+    "    shape -- the shape (n_H, n_W) of the output matrix for which we want to distribute the value of dz\n",
+    "    \n",
+    "    Returns:\n",
+    "    a -- Array of size (n_H, n_W) for which we distributed the value of dz\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    # Retrieve dimensions from shape (≈1 line)\n",
+    "    (n_H, n_W) = shape\n",
+    "    \n",
+    "    # Compute the value to distribute on the matrix (≈1 line)\n",
+    "    average = np.ones((n_H, n_W))\n",
+    "    \n",
+    "    # Create a matrix where every entry is the \"average\" value (≈1 line)\n",
+    "    a = average * dz / (n_H * n_W)\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**: \n",
+    "\n",
+    "<table> \n",
+    "<tr> \n",
+    "<td>\n",
+    "distributed_value =\n",
+    "</td>\n",
+    "<td>\n",
+    "[[ 0.5  0.5]\n",
+    "<br\\> \n",
+    "[ 0.5  0.5]]\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 12.5.2.3 完整的池化层反向传播\n",
+    "\n",
+    "现在我们已经有了计算池化层反向传播的所有组件。\n",
+    "\n",
+    "**练习**: 实现不同模式下（`\"max\"` 和 `\"average\"`）的函数 `pool_backward`。这里会用到四层循环（对训练样本、高度、宽度、通道）。使用 `if/elif` 语句来判断模式。如果是 'average'，则使用 `distribute_value()`，得到和 `a_slice` 同样大小的矩阵。 否则使用 `create_mask_from_window()`，并和对应的 dZ相乘。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pool_backward(dA, cache, mode = \"max\"):\n",
+    "    \"\"\"\n",
+    "    Implements the backward pass of the pooling layer\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- gradient of cost with respect to the output of the pooling layer, same shape as A\n",
+    "    cache -- cache output from the forward pass of the pooling layer, contains the layer's input and hparameters \n",
+    "    mode -- the pooling mode you would like to use, defined as a string (\"max\" or \"average\")\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- gradient of cost with respect to the input of the pooling layer, same shape as A_prev\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    \n",
+    "    # Retrieve information from cache (≈1 line)\n",
+    "    (A_prev, hparameters) = cache\n",
+    "    \n",
+    "    # Retrieve hyperparameters from \"hparameters\" (≈2 lines)\n",
+    "    stride = hparameters[\"stride\"]\n",
+    "    f = hparameters[\"f\"]\n",
+    "    \n",
+    "    # Retrieve dimensions from A_prev's shape and dA's shape (≈2 lines)\n",
+    "    m, n_H_prev, n_W_prev, n_C_prev = A_prev.shape\n",
+    "    m, n_H, n_W, n_C = dA.shape\n",
+    "    \n",
+    "    # Initialize dA_prev with zeros (≈1 line)\n",
+    "    dA_prev = np.zeros(A_prev.shape)\n",
+    "    \n",
+    "    for i in range(m):                       # loop over the training examples\n",
+    "        \n",
+    "        # select training example from A_prev (≈1 line)\n",
+    "        a_prev = A_prev[i]\n",
+    "        \n",
+    "        for h in range(n_H):                   # loop on the vertical axis\n",
+    "            for w in range(n_W):               # loop on the horizontal axis\n",
+    "                for c in range(n_C):           # loop over the channels (depth)\n",
+    "                    \n",
+    "                    # Find the corners of the current \"slice\" (≈4 lines)\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
+    "                    \n",
+    "                    # Compute the backward propagation in both modes.\n",
+    "                    if mode == \"max\":\n",
+    "                        \n",
+    "                        # Use the corners and \"c\" to define the current slice from a_prev (≈1 line)\n",
+    "                        a_prev_slice = a_prev[vert_start:vert_end, horiz_start:horiz_end, c]\n",
+    "                        # Create the mask from a_prev_slice (≈1 line)\n",
+    "                        mask = create_mask_from_window(a_prev_slice)\n",
+    "                        # Set dA_prev to be dA_prev + (the mask multiplied by the correct entry of dA) (≈1 line)\n",
+    "                        dA_prev[i, vert_start: vert_end, horiz_start: horiz_end, c] += dA[i, h, w, c] * mask\n",
+    "                        \n",
+    "                    elif mode == \"average\":\n",
+    "                        \n",
+    "                        # Get the value a from dA (≈1 line)\n",
+    "                        da = dA[i, h, w, c]\n",
+    "                        # Define the shape of the filter as fxf (≈1 line)\n",
+    "                        shape = (f, f)\n",
+    "                        # Distribute it to get the correct slice of dA_prev. i.e. Add the distributed value of da. (≈1 line)\n",
+    "                        dA_prev[i, vert_start: vert_end, horiz_start: horiz_end, c] += distribute_value(da, shape)\n",
+    "                        \n",
+    "    ### END CODE ###\n",
+    "    \n",
+    "    # Making sure your output shape is correct\n",
+    "    assert(dA_prev.shape == A_prev.shape)\n",
+    "    \n",
+    "    return dA_prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = max\n",
+      "mean of dA =  0.145713902729\n",
+      "dA_prev[1,1] =  [[ 0.          0.        ]\n",
+      " [ 5.05844394 -1.68282702]\n",
+      " [ 0.          0.        ]]\n",
+      "\n",
+      "mode = average\n",
+      "mean of dA =  0.145713902729\n",
+      "dA_prev[1,1] =  [[ 0.08485462  0.2787552 ]\n",
+      " [ 1.26461098 -0.25749373]\n",
+      " [ 1.17975636 -0.53624893]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "A_prev = np.random.randn(5, 5, 3, 2)\n",
+    "hparameters = {\"stride\" : 1, \"f\": 2}\n",
+    "A, cache = pool_forward(A_prev, hparameters)\n",
+    "dA = np.random.randn(5, 4, 2, 2)\n",
+    "\n",
+    "dA_prev = pool_backward(dA, cache, mode = \"max\")\n",
+    "print(\"mode = max\")\n",
+    "print('mean of dA = ', np.mean(dA))\n",
+    "print('dA_prev[1,1] = ', dA_prev[1,1])\n",
+    "print()\n",
+    "dA_prev = pool_backward(dA, cache, mode = \"average\")\n",
+    "print(\"mode = average\")\n",
+    "print('mean of dA = ', np.mean(dA))\n",
+    "print('dA_prev[1,1] = ', dA_prev[1,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**: \n",
+    "\n",
+    "mode = max:\n",
+    "<table> \n",
+    "<tr> \n",
+    "<td>\n",
+    "\n",
+    "**mean of dA =**\n",
+    "</td>\n",
+    "\n",
+    "<td>\n",
+    "\n",
+    "0.145713902729\n",
+    "\n",
+    "  </td>\n",
+    "</tr>\n",
+    "\n",
+    "<tr> \n",
+    "<td>\n",
+    "**dA_prev[1,1] =** \n",
+    "</td>\n",
+    "<td>\n",
+    "[[ 0.          0.        ] <br>\n",
+    " [ 5.05844394 -1.68282702] <br>\n",
+    " [ 0.          0.        ]]\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "mode = average\n",
+    "<table> \n",
+    "<tr> \n",
+    "<td>\n",
+    "\n",
+    "**mean of dA =**\n",
+    "</td>\n",
+    "\n",
+    "<td>\n",
+    "\n",
+    "0.145713902729\n",
+    "\n",
+    "  </td>\n",
+    "</tr>\n",
+    "\n",
+    "<tr> \n",
+    "<td>\n",
+    "**dA_prev[1,1] =** \n",
+    "</td>\n",
+    "<td>\n",
+    "[[ 0.08485462  0.2787552 ] <br>\n",
+    " [ 1.26461098 -0.25749373] <br>\n",
+    " [ 1.17975636 -0.53624893]]\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 恭喜 !\n",
+    "\n",
+    "这样，实现了所有卷积神经网络的组件，我们就更加了解了卷积神经网络的机制。在下个练习中，我们会使用Tensorflow来实现卷积神经网络。"
    ]
   },
   {
