--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -1572,7 +1572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.1 Tensorflow 模型\n",
+    "### 13.0 Tensorflow 模型\n",
     "\n",
     "上一节中，我们使用numpy来实现了一些卷积神经网络的辅助函数，从而更好第了解卷积神经网络背后的运行机制。而如今，绝大多数深度学习的实际应用都是基于编程框架来构建的，这些编程框架提供了很多自带的函数，我们只需要调用就可以了。\n",
     "\n",
@@ -1698,6 +1698,94 @@
     "print (\"X_test shape: \" + str(X_test.shape))\n",
     "print (\"Y_test shape: \" + str(Y_test.shape))\n",
     "conv_layers = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 13.1 创建占位符\n",
+    "\n",
+    "Tensorflow要求我们为输入数据创建占位符（placeholders），之后在运行session时，再填充数据给模型。\n",
+    "\n",
+    "**练习**: 实现下面的函数，来为输入图像 $X$ 和 输出 $Y$ 创建占位符。在这个阶段，我们无法需要定义训练样本的数量。我们可以将批次大小设置为None，到后面再进行设置。因此，这时 X 的维度为 **[None, n_H0, n_W0, n_C0]** 而Y的维度为 **[None, n_y]**.  [提示](https://www.tensorflow.org/api_docs/python/tf/placeholder)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: create_placeholders\n",
+    "\n",
+    "def create_placeholders(n_H0, n_W0, n_C0, n_y):\n",
+    "    \"\"\"\n",
+    "    Creates the placeholders for the tensorflow session.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    n_H0 -- scalar, height of an input image\n",
+    "    n_W0 -- scalar, width of an input image\n",
+    "    n_C0 -- scalar, number of channels of the input\n",
+    "    n_y -- scalar, number of classes\n",
+    "        \n",
+    "    Returns:\n",
+    "    X -- placeholder for the data input, of shape [None, n_H0, n_W0, n_C0] and dtype \"float\"\n",
+    "    Y -- placeholder for the input labels, of shape [None, n_y] and dtype \"float\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    ### START CODE HERE ### (≈2 lines)\n",
+    "    X = tf.placeholder(tf.float32, shape=[None, n_H0, n_W0, n_C0])\n",
+    "    Y = tf.placeholder(tf.float32, shape=[None, n_y])\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X = Tensor(\"Placeholder:0\", shape=(?, 64, 64, 3), dtype=float32)\n",
+      "Y = Tensor(\"Placeholder_1:0\", shape=(?, 6), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, Y = create_placeholders(64, 64, 3, 6)\n",
+    "print (\"X = \" + str(X))\n",
+    "print (\"Y = \" + str(Y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**\n",
+    "\n",
+    "<table> \n",
+    "<tr>\n",
+    "<td>\n",
+    "    X = Tensor(\"Placeholder:0\", shape=(?, 64, 64, 3), dtype=float32)\n",
+    "\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "    Y = Tensor(\"Placeholder_1:0\", shape=(?, 6), dtype=float32)\n",
+    "\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>"
    ]
   },
   {
