--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -2034,6 +2034,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 13.4 计算成本\n",
+    "\n",
+    "实现下面的计算成本函数。下面两个函数可能会有帮助：\n",
+    "\n",
+    "- **tf.nn.softmax_cross_entropy_with_logits(logits = Z3, labels = Y):** 计算softmax熵损失。这个函数会同时计算softmax激活函数和损失。完整的文档可以查看[这里](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits)\n",
+    "- **tf.reduce_mean:** 计算一个张量不同维度之间的平均值。使用这个函数来对所有的训练样本求损失之和。完整的文档可以查看[这里](https://www.tensorflow.org/api_docs/python/tf/reduce_mean)\n",
+    "\n",
+    "**练习**: 使用上面的两个函数，计算成本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: compute_cost \n",
+    "\n",
+    "def compute_cost(Z3, Y):\n",
+    "    \"\"\"\n",
+    "    Computes the cost\n",
+    "    \n",
+    "    Arguments:\n",
+    "    Z3 -- output of forward propagation (output of the last LINEAR unit), of shape (6, number of examples)\n",
+    "    Y -- \"true\" labels vector placeholder, same shape as Z3\n",
+    "    \n",
+    "    Returns:\n",
+    "    cost - Tensor of the cost function\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ### (1 line of code)\n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits = Z3, labels = Y))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost = 2.91034\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    np.random.seed(1)\n",
+    "    X, Y = create_placeholders(64, 64, 3, 6)\n",
+    "    parameters = initialize_parameters()\n",
+    "    Z3 = forward_propagation(X, parameters)\n",
+    "    cost = compute_cost(Z3, Y)\n",
+    "    init = tf.global_variables_initializer()\n",
+    "    sess.run(init)\n",
+    "    a = sess.run(cost, {X: np.random.randn(4,64,64,3), Y: np.random.randn(4,6)})\n",
+    "    print(\"cost = \" + str(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**: \n",
+    "\n",
+    "<table>\n",
+    "    <td> \n",
+    "    cost =\n",
+    "    </td> \n",
+    "    \n",
+    "    <td> \n",
+    "    2.91034\n",
+    "    </td> \n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
