Keras tutorial - the Happy House

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -201,6 +201,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. Show me the Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Keras教程 - 快乐之家\n",
+    "\n",
+    "在本节，我们将会学习：\n",
+    "1. Python编写的高级神经网络API（编程框架）Keras，它可以跑在多个底层框架上，比如Tensorflow，CNTK。\n",
+    "2. 看看我们如何可以在几个小时内就构建一个深度学习算法。\n",
+    "\n",
+    "开发Keras的目的，就是为了让深度学习工程师可以更快地构建和实验不同的模型。正如Tensorflow相对于Python标准库或者Numpy来说是更高级的框架，Keras是在其之上更高层次的框架，提供了更多的抽象。能够很快地将想法变成结果，对于找到正确的模型来说十分关键。但与此同时，Keras相比底层框架，限制也更多，所以会有一些十分复杂的模型，可以用Tensorflow来表示，但不能（轻易地）用Keras来表示。尽管如此，Keras对于绝大多数常见的模型来说，是十分管用的。\n",
+    "\n",
+    "在这个练习中，我们会解决“快乐之家”难题，下面会有详细的解析。首先，让我们导入相应的模块。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from keras import layers\n",
+    "from keras.layers import Input, Dense, Activation, ZeroPadding2D, BatchNormalization, Flatten, Conv2D\n",
+    "from keras.layers import AveragePooling2D, MaxPooling2D, Dropout, GlobalMaxPooling2D, GlobalAveragePooling2D\n",
+    "from keras.models import Model\n",
+    "from keras.preprocessing import image\n",
+    "from keras.utils import layer_utils\n",
+    "from keras.utils.data_utils import get_file\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
+    "import pydot\n",
+    "from IPython.display import SVG\n",
+    "from keras.utils.vis_utils import model_to_dot\n",
+    "from keras.utils import plot_model\n",
+    "from kt_utils import *\n",
+    "\n",
+    "import keras.backend as K\n",
+    "K.set_image_data_format('channels_last')\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.pyplot import imshow\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### 3.1.1 快乐之家\n",
+    "\n",
+    "下一个假期，你觉得和五位朋友一起过。快乐之家的地理位置十分便利，但最重要的是所有人都承诺，在家的时候会十分开心。所以，想进入房子的人必须证明他们现在十分开心。\n",
+    "\n",
+    "<img src=\"img/happy-house.jpg\" style=\"width:350px;height:270px;\">\n",
+    "<caption><center> <u> <font color='purple'> **Figure 1** </u><font color='purple'>  : **the Happy House**</center></caption>\n",
+    "\n",
+    "作为深度学习专家，为了保证“快乐”的原则被严格执行，你会构建一个算法，使用门口摄像头拍摄的图片来判断访客是否快乐。只有在判断访问快乐的时候，门才会自动打开。\n",
+    "\n",
+    "你收集了用门口摄像头拍摄的一组朋友和自己的照片，数据集已经进行了打标。\n",
+    "\n",
+    "<img src=\"img/house-members.png\" style=\"width:550px;height:250px;\">\n",
+    "\n",
+    "执行下面的代码，对数据集进行正规化，并了解数据集的维度。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of training examples = 600\n",
+      "number of test examples = 150\n",
+      "X_train shape: (600, 64, 64, 3)\n",
+      "Y_train shape: (600, 1)\n",
+      "X_test shape: (150, 64, 64, 3)\n",
+      "Y_test shape: (150, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_orig, Y_train_orig, X_test_orig, Y_test_orig, classes = load_dataset()\n",
+    "\n",
+    "# Normalize image vectors\n",
+    "X_train = X_train_orig/255.\n",
+    "X_test = X_test_orig/255.\n",
+    "\n",
+    "# Reshape\n",
+    "Y_train = Y_train_orig.T\n",
+    "Y_test = Y_test_orig.T\n",
+    "\n",
+    "print (\"number of training examples = \" + str(X_train.shape[0]))\n",
+    "print (\"number of test examples = \" + str(X_test.shape[0]))\n",
+    "print (\"X_train shape: \" + str(X_train.shape))\n",
+    "print (\"Y_train shape: \" + str(Y_train.shape))\n",
+    "print (\"X_test shape: \" + str(X_test.shape))\n",
+    "print (\"Y_test shape: \" + str(Y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**\"快乐之家\"数据集详情**:\n",
+    "- 图片维度 (64,64,3)\n",
+    "- 训练集: 600 张图片\n",
+    "- 测试集: 150 张图片"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
